--- a/ApiForm/ApiForm.csproj
+++ b/ApiForm/ApiForm.csproj
@@ -166,14 +166,10 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
-    <Compile Include="Models\Contact.cs" />
-    <Compile Include="Models\ContactCategory.cs" />
-    <Compile Include="Models\ContactContext.cs" />
-    <Compile Include="Models\ContactDbInitializer.cs" />
-    <Compile Include="Models\ContactGender.cs" />
     <Compile Include="Models\Data.cs" />
     <Compile Include="Models\DataContext.cs" />
     <Compile Include="Models\DataDbInitializer.cs" />
+    <Compile Include="Models\Util\DataFormatter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
